--- a/src/app/pages/oferta/oferta.component.html
+++ b/src/app/pages/oferta/oferta.component.html
@@ -49,8 +49,25 @@
     </div>
     } @else {
       <h5 class="text-center text-muted">Sem ofertas no momento</h5>
-
     }
 
+  </div>
+  <div class="row mt-3 mb-4">
+    <div class="col">
+      <nav>
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-como-usar" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Como usar?</button>
+          <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-onde-fica" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Onde fica?</button>
+        </div>
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-como-usar" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+          Como usar
+        </div>
+        <div class="tab-pane fade" id="nav-onde-fica" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+          Onde fica
+        </div>
+      </div>
+    </div>
   </div>
 </div>
